--- a/style.css
+++ b/style.css
@@ -1,25 +1,23 @@
-:root{
-  font-size: 62.5%;/*1rem = 10px*/
+:root {
+  font-size: 62.5%; /*1rem = 10px*/
   --hue: 250;
   --bg-primary: hsla(calc(var(--hue) - 13), 22%, 20%, 1);
   --ft--primary: hsla(0, 0%, 100%, 1);
   --ft-secondary: hsla(var(--hue), 50%, 80%, 1);
-  --ft-dark: hsla(var(--hue) 100%, 11%, 1);
+  --ft-dark: hsla(var(--hue), 100%, 11%, 1);
 }
 
-*{
-  margin: 0 ;
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
+
   text-decoration: none;
 
   list-style: none;
-
-
 }
 
-body{
+body {
   font-family: 'Epilogue', sans-serif;
 
   font-size: 1.6rem;
@@ -29,9 +27,24 @@ body{
   background-color: var(--bg-primary);
 
   color: var(--ft--primary);
+
+  padding: 10.6rem 2.3rem;
 }
 
-header h4{
+.page {
+  max-width: 33rem;
+
+  margin: 0 auto;
+}
+
+img {
+  width: 100%;
+  height: auto;
+
+  border-radius: 0.6rem;
+}
+
+header h4 {
   color: var(--ft-secondary);
   font-weight: 400;
   font-size: 1.6rem;
@@ -41,10 +54,120 @@ header h4{
   text-transform: uppercase;
 }
 
-header h1{
+header h1 {
   font-weight: 800;
   font-size: 4rem;
   line-height: 4.8rem;
 
   margin-block: 1.7rem 8rem;
+}
+
+header {
+  animation: topDown 500ms ease-in-out;
+}
+
+main {
+  display: grid;
+  gap: 3.2rem;
+
+  animation: downTop 500ms ease-in-out;
+}
+.card {
+  position: relative;
+}
+.card img {
+  height: 41.6rem;
+  object-fit: cover;
+
+  transition: all 300ms ease-in-out;
+}
+.card img:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.card h2 {
+  position: absolute;
+  left: 2.8rem;
+  bottom: 5.1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 2.3rem;
+
+  font-weight: 800;
+  font-size: 4rem;
+  line-height: 4.8rem;
+}
+.card h2 span {
+  background-color: var(--ft--primary);
+
+  color: var(--ft-dark);
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 3.2rem;
+
+  padding: 0.5rem 1.6rem;
+
+  border-radius: 1.9rem;
+
+  width: fit-content;
+}
+
+@keyframes topDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-25px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes downTop {
+  0% {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(1);
+  }
+}
+
+@media (min-width: 756px){
+  body{
+    padding: 9.2rem 13.5rem 14.8rem;
+  }
+  
+  .page {
+    max-width: 117rem;
+  }
+
+  header h1 {
+    font-size: 5.6rem;
+    line-height: 6.4rem;
+
+    letter-spacing: -1px;
+  }
+
+  main{
+    grid-template-areas: "A B B"
+    "C C  D";
+  }
+  .colA{
+    grid-area: A;
+  }
+  .colB{
+    grid-area: B;
+  }
+  .colC{
+    grid-area: C;
+  }
+  .colD{
+    grid-area: D;
+  }
 }
